# herdr-corral

./: .gitignore  Cargo.toml  README.md  config.default.sh  config.example.sh  herdr-plugin.toml
.github/workflows/: release.yml
.pi-subagents/artifacts/: bc6aaf4c_reviewer_0_input.md  bc6aaf4c_reviewer_0_meta.json  bc6aaf4c_reviewer_0_output.md  bc6aaf4c_reviewer_0_transcript.jsonl  bc6aaf4c_reviewer_1_input.md  bc6aaf4c_reviewer_1_meta.json  bc6aaf4c_reviewer_1_output.md  bc6aaf4c_reviewer_1_transcript.jsonl  bc6aaf4c_reviewer_2_input.md  bc6aaf4c_reviewer_2_meta.json  bc6aaf4c_reviewer_2_output.md  bc6aaf4c_reviewer_2_transcript.jsonl
plugins/starter/: README.md  herdr-plugin.toml
plugins/starter/scripts/: dump-context.sh  hello.sh  list-workspaces.sh
plugins/workbench/: README.md  herdr-plugin.toml
plugins/workbench/scripts/: lib.sh  open-github-section.sh  open-link-preview.sh  run-explorer.sh  run-github.sh  run-link-preview.sh  run-scm.sh  toggle-pane.sh
scripts/: install-release.sh  open-corral.sh  seed-config.sh
src/: app.rs  config.rs  diffview.rs  feature.rs  git.rs  github_detail.rs  herdr_cli.rs  host.rs  layout.rs  lib.rs  main.rs  theme.rs
src/feature/: explorer.rs  github.rs  mod.rs  placeholder.rs  scm.rs  view.rs
src/github/: gh.rs  mod.rs  model.rs
src/github/detail/: app.rs  images.rs  markdown.rs  mod.rs  pages.rs  util.rs
src/herdr/: cli.rs  launch.rs  mod.rs
src/ui/: activity.rs  icons.rs  layout.rs  mod.rs  theme.rs
tests/: preview_protocol.rs
