[package]
name = "corral"
version = "0.1.0"
edition = "2021"
description = "VS Code-style terminal workbench plugin for Herdr"
license = "MIT"

[lib]
name = "corral"
path = "src/lib.rs"

[[bin]]
name = "corral"
path = "src/main.rs"

[[bin]]
name = "corral-diff"
path = "src/bin/corral-diff.rs"

[[bin]]
name = "corral-github"
path = "src/bin/corral-github.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Same color type Herdr uses. Crossterm backend powers the single-pane host TUI.
ratatui = { version = "0.29", default-features = false, features = ["serde", "crossterm"] }
crossterm = "0.28"
# Detect whether the terminal can render Nerd Font glyphs (for future file icons).
has-nerd-font = "0.20260228"
devicons = "0.6"
notify = "8"

[profile.release]
opt-level = "z"
lto = true
strip = true
