[package]
name = "corral"
version = "0.1.0"
edition = "2021"
description = "VS Code-style terminal workbench plugin for Herdr"
license = "MIT"

[lib]
name = "corral"
path = "src/lib.rs"

[[bin]]
name = "corral"
path = "src/main.rs"

[[bin]]
name = "corral-diff"
path = "src/bin/corral-diff.rs"

[[bin]]
name = "corral-github"
path = "src/bin/corral-github.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Same color type Herdr uses. Crossterm backend powers the single-pane host TUI.
ratatui = { version = "0.30", default-features = false, features = ["serde", "crossterm"] }
crossterm = "0.29"
# Detect whether the terminal can render Nerd Font glyphs (for future file icons).
has-nerd-font = "0.20260228"
devicons = "0.6"
notify = "8"
# Markdown rendering in the GitHub detail client.
pulldown-cmark = { version = "0.13", default-features = false }
# Inline images (kitty/sixel/iterm2) for the GitHub detail client.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
